--- a/logstash.conf
+++ b/logstash.conf
@@ -1,13 +1,13 @@
 input {
   kafka {
-    bootstrap_servers => "192.168.61.28:9092"
-    topics => ["test"]
+    bootstrap_servers => "192.168.61.28:9093,192.168.61.28:9095,192.168.61.28:9097"
+    topics => ["Generate_Order_Details"]
   }
 }
 
 output {
   elasticsearch {
     hosts => ["192.168.61.28:9200"]
-    index => "joy_index"
+    index => "new_test_index"
   }
 }
